--- a/index.css
+++ b/index.css
@@ -5,24 +5,39 @@
   font-family: "Nunito", sans-serif;
   color: azure;
   font-optical-sizing: auto;
+  text-shadow: 0px 10px 5px rgba(0, 0, 0, 0.6);
 }
 
 body {
-    margin: 0px 10vw;
+    margin: 0px 20vw;
     background-color: #131416;
 }
 
 .header {
     display: flex;
-    justify-content: space-evenly;
-    padding: 16px 0px;
+    justify-content: space-between;
+    padding: 32px 0px;
     font-weight: 900;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 .header a {
     text-decoration: none;
     
+}
+
+.container-hero {
+    margin-top: 128px;
+}
+
+.announcement {
+    font-size: 64px;
+    font-weight: 700;
+    text-align: justify;
+}
+
+.container-hero .text {
+    font-size: 58px;
 }
 
 .colors {
